infrastructure/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - monitoring.cluster.f4mily.net
    secretName: wildcard-f4mily-net-tls
  rules:
  - host: monitoring.cluster.f4mily.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-vm-victoria-metrics-single-server
            port:
              number: 8428
